fix: issue with instance settings allowing setting of memory java params